msa 구조로 변경 중..  - member